Clean up some stale files, audit log expansion
